base/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    spec:
      containers:
      - name: app
        image: sciety/sciety
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /ping
            port: http
          timeoutSeconds: 5
        resources:
          requests:
            cpu: 1
        volumeMounts:
        - mountPath: /var/run/secrets/app
          name: gcp-ncrc-key
          readOnly: true
      volumes:
      - name: gcp-ncrc-key
        secret:
          secretName: ncrc-sheet-key
